styling: Fixed overflow issue on templated pages

--- a/src/templates/Page/index.scss
+++ b/src/templates/Page/index.scss
@@ -4,7 +4,6 @@ main.page {
 
   .container {
     background: aliceblue;
-    min-height: 650px;
 
     .body {
       max-width: 500px;
